<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:focusable="true"
            android:focusableInTouchMode="true">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/large_margin_size"
                android:layout_marginLeft="@dimen/small_margin_size"
                android:textSize="@dimen/textview_text_size"
                android:text="@string/open_type"/>
            <RadioGroup
                android:id="@+id/alisdk_rg_tran_openmode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/small_margin_size"
                android:layout_marginRight="@dimen/small_margin_size"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/alisdk_rb_tran_default"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:layout_weight="1"
                    android:onClick="defaultChecked"
                    android:text="@string/default_open" />

                <RadioButton
                    android:id="@+id/alisdk_rb_tran_h5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="h5Checked"
                    android:text="@string/h5_open" />

                <RadioButton
                    android:id="@+id/alisdk_rb_mine_taobao"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="taobaoChecked"
                    android:text="@string/taobao_open" />

                <RadioButton
                    android:id="@+id/alisdk_rb_mine_tmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="tmallChecked"
                    android:text="@string/tmall_open" />

            </RadioGroup>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/small_margin_size"
                android:layout_marginLeft="@dimen/small_margin_size"
                android:textSize="@dimen/textview_text_size"
                android:text="@string/commodity_type"/>
            <RadioGroup
                android:id="@+id/alisdk_rg_commoditytype"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/small_margin_size"
                android:layout_marginRight="@dimen/small_margin_size"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/alisdk_rb_common"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:layout_weight="1"
                    android:onClick="commonChecked"
                    android:text="@string/common_commodity" />

                <RadioButton
                    android:id="@+id/alisdk_rb_taoke"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="taokeChecked"
                    android:text="@string/taoke_commodity" />
            </RadioGroup>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_margin="@dimen/small_margin_size"
                android:background="@drawable/linearlayout_shape">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/small_margin_size"
                    android:textSize="@dimen/textview_text_size"
                    android:text="@string/input_url"/>

                <EditText
                    android:id="@+id/alisdk_et_url"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/default_showurl"/>
                <Button
                    android:id="@+id/alisdk_btn_show_url"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/small_margin_size"
                    android:onClick="showUrl"
                    android:text="@string/open_url" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_margin="@dimen/small_margin_size"
                android:background="@drawable/linearlayout_shape">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/textview_text_size"
                    android:layout_marginTop="@dimen/small_margin_size"
                    android:text="@string/isconfuse"/>

                <RadioGroup
                    android:id="@+id/alisdk_rg_confusion"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/alisdk_rb_notconfuse"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        android:layout_weight="1"
                        android:onClick="notConfuseChecked"
                        android:text="@string/notconfuse" />

                    <RadioButton
                        android:id="@+id/alisdk_rb_confuse"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:onClick="confuseChecked"
                        android:text="@string/confuse" />
                </RadioGroup>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/small_margin_size"
                    android:textSize="@dimen/textview_text_size"
                    android:text="@string/input_itemid"/>

                <EditText
                    android:id="@+id/alisdk_et_itemId"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/itemid"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/alisdk_btn_show_item"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/small_margin_size"
                        android:onClick="showDetail"
                        android:text="@string/open_item" />
                    <Button
                        android:id="@+id/alisdk_btn_add_cart"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/small_margin_size"
                        android:onClick="addToCart"
                        android:text="@string/add_item_to_cart" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_margin="@dimen/small_margin_size"
                android:background="@drawable/linearlayout_shape">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/textview_text_size"
                    android:layout_marginTop="@dimen/small_margin_size"
                    android:text="@string/input_shopid"/>

                <EditText
                    android:id="@+id/alisdk_et_shopId"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/shopid"/>
                <Button
                    android:id="@+id/alisdk_btn_show_shop"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/small_margin_size"
                    android:onClick="showShop"
                    android:text="@string/open_shop" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>


</LinearLayout>